zmiana zaznaczania zadań